# MetaRareEpi

./: .gitignore  LICENSE  Makefile  MetaRareEpi_Revised_R2.docx  README.md  pyproject.toml  tmp_fake_results.py
.github/workflows/: deploy.yml
docs/: index.html
docs/css/: style.css
results/: fedcspa_results.csv
simulations/: README.md  benchmark_scalability.py  benchmark_type1_error.py  evaluate_federated.py  simulate_biobank.py
src/: engine_jax.py  federated_spa.py
src/metararepi/: __init__.py  _config.py  glmm.py  graph_search.py  nlgc.py  weighting.py
src/metararepi/federated/: __init__.py  node.py
src/metararepi/io/: __init__.py  zarr_store.py
src/metararepi/kernel/: __init__.py  fast_mvm.py
src/metararepi/spa/: __init__.py  saddlepoint.py
tests/: conftest.py  memory_audit.py  memory_audit_report.json  test_config.py  test_federated_spa.py  test_glmm.py  test_math_invariants.py  test_saddlepoint_module.py  test_security.py  test_weighting.py  test_zarr_store.py
viz/: README.md  viz_3d_synergy.py  viz_calibration.py  viz_federated.py  viz_network.py  viz_qq_nature.R  viz_results.R  viz_scalability.py
