[project]
name = "metararepi"
version = "2.0.0"
description = "Dual-Space Federated SPA with Deflation-Accelerated Cumulant Extraction for Rare-Variant Epistasis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MetaRareEpi Team" }]
keywords = ["epistasis", "rare-variants", "meta-analysis", "GWAS", "kernel-methods", "federated", "homomorphic-encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.4"]
zarr = ["zarr>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metararepi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
